[gd_scene load_steps=23 format=3 uid="uid://dip0t5cixw72i"]

[ext_resource type="Script" path="res://scripts/orc.gd" id="1_6vy0w"]
[ext_resource type="Texture2D" uid="uid://b1d6cp1cyq87a" path="res://assests/sprites/orc/Orc.png" id="1_c56u5"]
[ext_resource type="Script" path="res://components/stats.gd" id="1_sip4y"]
[ext_resource type="Script" path="res://components/hitbox.gd" id="3_xgb0k"]
[ext_resource type="Script" path="res://components/hurtbox.gd" id="5_xopne"]

[sub_resource type="AtlasTexture" id="AtlasTexture_pwpua"]
atlas = ExtResource("1_c56u5")
region = Rect2(0, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_wst0e"]
atlas = ExtResource("1_c56u5")
region = Rect2(100, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_v40db"]
atlas = ExtResource("1_c56u5")
region = Rect2(200, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_0t7d6"]
atlas = ExtResource("1_c56u5")
region = Rect2(300, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_wrldu"]
atlas = ExtResource("1_c56u5")
region = Rect2(400, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_tbbwu"]
atlas = ExtResource("1_c56u5")
region = Rect2(500, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_dox0v"]
atlas = ExtResource("1_c56u5")
region = Rect2(0, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_shssu"]
atlas = ExtResource("1_c56u5")
region = Rect2(100, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_fhr37"]
atlas = ExtResource("1_c56u5")
region = Rect2(200, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_njarn"]
atlas = ExtResource("1_c56u5")
region = Rect2(300, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_j46iw"]
atlas = ExtResource("1_c56u5")
region = Rect2(400, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_07f2b"]
atlas = ExtResource("1_c56u5")
region = Rect2(500, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_qr1pl"]
atlas = ExtResource("1_c56u5")
region = Rect2(600, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_bthla"]
atlas = ExtResource("1_c56u5")
region = Rect2(700, 100, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_cjagp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pwpua")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wst0e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v40db")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0t7d6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wrldu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tbbwu")
}],
"loop": false,
"name": &"attack",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dox0v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_shssu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fhr37")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_njarn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j46iw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_07f2b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qr1pl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bthla")
}],
"loop": false,
"name": &"walk",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_vnp0j"]
radius = 3.0
height = 10.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ckutg"]
radius = 3.0
height = 10.0

[node name="Orc" type="CharacterBody2D" node_paths=PackedStringArray("stats")]
collision_layer = 256
collision_mask = 256
script = ExtResource("1_6vy0w")
stats = NodePath("Stats")

[node name="Stats" type="Node" parent="."]
script = ExtResource("1_sip4y")
movement_speed = 50

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-1, -7)
sprite_frames = SubResource("SpriteFrames_cjagp")
animation = &"walk"
autoplay = "walk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -7)
shape = SubResource("CapsuleShape2D_vnp0j")

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 0
script = ExtResource("3_xgb0k")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(0, -7)
shape = SubResource("CapsuleShape2D_ckutg")

[node name="ProgressBar" type="ProgressBar" parent="."]
modulate = Color(0.982729, 0.00020263, 0.000112626, 1)
offset_left = -9.0
offset_top = -20.0
offset_right = 8.0
offset_bottom = -16.0
value = 100.0
show_percentage = false

[node name="HurtBox" type="Area2D" parent="." node_paths=PackedStringArray("stats")]
position = Vector2(-9, -20)
collision_layer = 0
collision_mask = 512
script = ExtResource("5_xopne")
stats = NodePath("../Stats")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(0, -7)
shape = SubResource("CapsuleShape2D_ckutg")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="hit_registered" from="HitBox" to="." method="_on_hit_box_hit_registered"]
[connection signal="received_damage" from="HurtBox" to="." method="_on_hurt_box_received_damage"]
