[gd_scene load_steps=19 format=3 uid="uid://rbj80erdhio0"]

[ext_resource type="Script" path="res://scripts/entity/player/player.gd" id="1_rxeow"]
[ext_resource type="Script" path="res://components/stats.gd" id="2_3ppm0"]
[ext_resource type="Texture2D" uid="uid://b4xc2hjastnxd" path="res://assests/sprites/player/block_character.png" id="3_31lws"]
[ext_resource type="Script" path="res://scripts/entity/player/graphics.gd" id="3_513h3"]
[ext_resource type="PackedScene" uid="uid://cov7wcfpuohaa" path="res://scenes/player/hand.tscn" id="5_q4th5"]
[ext_resource type="Script" path="res://components/hurtbox.gd" id="5_qpnn2"]
[ext_resource type="PackedScene" uid="uid://cft2ma5kps054" path="res://scenes/item/sword.tscn" id="6_pbmal"]
[ext_resource type="Script" path="res://scripts/entity/player/item_detector.gd" id="7_dwnhr"]

[sub_resource type="Animation" id="Animation_tlyoj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Graphics/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Graphics:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_35tm1"]
resource_name = "new_animation"
length = 3.0
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Graphics/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11, 12, 13, 14, 15]
}

[sub_resource type="Animation" id="Animation_wb6bs"]
resource_name = "walk_right"
length = 0.2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Graphics:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(0.5, 2),
"update": 0,
"values": [Vector2(-1, 1), Vector2(1, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Graphics")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": ["look_left"],
"method": &"change_hands_ordering"
}]
}

[sub_resource type="Animation" id="Animation_5f20b"]
resource_name = "walk"
length = 0.2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Graphics:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(0.5, 2),
"update": 0,
"values": [Vector2(1, 1), Vector2(-1, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Graphics")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": ["look_right"],
"method": &"change_hands_ordering"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_n8vjb"]
_data = {
"RESET": SubResource("Animation_tlyoj"),
"death": SubResource("Animation_35tm1"),
"look_left": SubResource("Animation_wb6bs"),
"look_right": SubResource("Animation_5f20b")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5anm6"]
radius = 7.0
height = 14.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pyqma"]
bg_color = Color(0.478431, 0.478431, 0.478431, 0.345098)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_loocs"]
bg_color = Color(0.82882, 0, 0.0108883, 1)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_7ao3o"]
radius = 7.0
height = 14.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_tpnvk"]
radius = 7.0
height = 14.0

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("stats")]
collision_layer = 2
collision_mask = 17
script = ExtResource("1_rxeow")
stats = NodePath("Stats")

[node name="Stats" type="Node" parent="."]
script = ExtResource("2_3ppm0")

[node name="Graphics" type="Node2D" parent="."]
script = ExtResource("3_513h3")

[node name="Body" type="Sprite2D" parent="Graphics"]
z_index = 1
position = Vector2(0, -7)
texture = ExtResource("3_31lws")
hframes = 8
vframes = 2

[node name="LeftHand" parent="Graphics" instance=ExtResource("5_q4th5")]
position = Vector2(0, -2)

[node name="Sword" parent="Graphics/LeftHand" instance=ExtResource("6_pbmal")]
visible = false

[node name="RightHand" parent="Graphics" instance=ExtResource("5_q4th5")]
z_index = 0
position = Vector2(-4, -2)

[node name="Sword" parent="Graphics/RightHand" instance=ExtResource("6_pbmal")]
visible = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_n8vjb")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -7)
shape = SubResource("CapsuleShape2D_5anm6")

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = -10.0
offset_top = -24.0
offset_right = 9.0
offset_bottom = -21.0
theme_override_styles/background = SubResource("StyleBoxFlat_pyqma")
theme_override_styles/fill = SubResource("StyleBoxFlat_loocs")
step = 1.0
value = 100.0
show_percentage = false

[node name="HurtBox" type="Area2D" parent="." node_paths=PackedStringArray("stats")]
collision_layer = 0
collision_mask = 512
monitorable = false
script = ExtResource("5_qpnn2")
stats = NodePath("../Stats")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(0, -7)
shape = SubResource("CapsuleShape2D_7ao3o")

[node name="ItemDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16
script = ExtResource("7_dwnhr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ItemDetector"]
position = Vector2(0, -7)
shape = SubResource("CapsuleShape2D_tpnvk")

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="body_entered" from="HurtBox" to="." method="_on_hurt_box_body_entered"]
[connection signal="received_damage" from="HurtBox" to="." method="_on_hurt_box_received_damage"]
[connection signal="area_entered" from="ItemDetector" to="ItemDetector" method="_on_area_entered"]
